# Alpha-IT-HUB

./: .env.example  .gitignore  .npmrc  ARCHITECTURE.md  DEPLOY.md  ESTABILIZAR.md  STOCK_INTELLIGENCE.md  STOCK_SPEC.md  STOCK_V2.md  alpha_pos_presentacion (6).html  package.json  pnpm-lock.yaml  railway.json  turbo.json  vercel.json
DISEÑO ALPHA IT/Informe editable/: Guía de Formato de INFORME.docx  INFORME X.dotx
apps/backend/: .env.example  Dockerfile  pyproject.toml
apps/backend/src/alpha_hub/: config.py  dependencies.py  main.py
apps/backend/src/alpha_hub/analytics/: forecast.py  router.py  schemas.py  service.py
apps/backend/src/alpha_hub/api/v1/: router.py
apps/backend/src/alpha_hub/auth/: router.py  schemas.py  service.py
apps/backend/src/alpha_hub/azure_db/: router.py  schemas.py  service.py
apps/backend/src/alpha_hub/core/: security.py
apps/backend/src/alpha_hub/dashboard/: router.py  schemas.py  service.py
apps/backend/src/alpha_hub/database/: platform.py  tenant.py  vault.py
apps/backend/src/alpha_hub/models/: platform.py
apps/backend/src/alpha_hub/services/: supabase_admin.py
apps/backend/src/alpha_hub/subscriptions/: router.py  schemas.py  service.py
apps/backend/src/alpha_hub/tenants/: middleware.py  router.py  schemas.py  service.py
apps/backend/src/alpha_hub/users/: router.py  schemas.py  service.py
apps/client/: .env.example  middleware.ts  next.config.ts  package.json  vercel.json
apps/mobile/: .env.example  app.config.ts  metro.config.js  package.json  tsconfig.json
supabase/: seed.sql  setup_completo.sql
(+165 files in other folders)
